# python-pytest-testing-project-79

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  logger_config.py  page_loader.py  parse_args.py  pg_loader.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py  test_pg_loader.py
tests/fixtures/: after_download.html  ru-hexlet-io-assets-application.css  step3_page_after.html
